[metadata]
name = scame
version = attr: scame.__version__
description = A composite linter and style checker.
long_description = file: README.rst
author = Curtis Hovey
maintainer = Adi Roibam
maintainer_email = adi.roiban@chevah.com
url = https://github.com/chevah/scame
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = ~=3.8
install_requires =
    pyflakes
packages = find:
scripts =

[options.extras_require]
dev =
    bunch
    pycodestyle
    bandit
    pylint
    nose
    black
    isort

[options.entry_points]
console_scripts =
    scame = scame.__main__:main
